# ray_detectron2

./: .coveragerc  LICENSE  README.md  pyproject.toml
ray_detectron2/: __init__.py  ray_detectron2.py
tests/: test_stub.py
