[tool.poetry]
name = "ray_detectron2"
version = "0.1.0"
description = "ray_detectron2"
authors = ["heng2j"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/heng2j/ray_detectron2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "==22.10"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
ray_detectron2 = "ray_detectron2.ray_detectron2:fib_print"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
files = ["ray_detectron2", "tests"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
